task310/src/main/java/com/example/task310/error/NotFoundException.java
package com.example.task310.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String msg) { super(msg); }
}
